src/objects/Contract_User_Group_Association__c.object
<CustomObject>
    <description>MG_Contract User Group Association</description>
    <fields>
        <fullName>Coverage_String__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coverage String</label>
        <referenceTo>Zonda_Contract__c</referenceTo>
        <relationshipLabel>Contract User Group Associations (Coverage String)</relationshipLabel>
        <relationshipName>Contract_User_Group_Associations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Logo_URL__c</fullName>
        <formula>Zonda_Contract__r.Account__r.Customer_Logo_URL__c</formula>
        <label>Customer Logo URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RSD_Email__c</fullName>
        <formula>Zonda_Contract__r.RSD_Email__c</formula>
        <label>RSD Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_s__c</fullName>
        <formula>IF( INCLUDES(Zonda_Contract__r.Role_s__c , &quot;Land Acquisition&quot;), &quot;Land Acquisition; &quot;,&quot;&quot;)
&amp;
IF( INCLUDES(Zonda_Contract__r.Role_s__c , &quot;Sales &amp; Marketing&quot;), &quot;Sales &amp; Marketing; &quot;,&quot;&quot;)</formula>
        <label>Role(s)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zonda_Contract__c</fullName>
        <label>Zonda Contract</label>
        <referenceTo>Zonda_Contract__c</referenceTo>
        <relationshipLabel>User Groups</relationshipLabel>
        <relationshipName>Contract_User_Group_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Zonda_User_Group__c</fullName>
        <label>Zonda User Group</label>
        <referenceTo>Zonda_User_Group__c</referenceTo>
        <relationshipLabel>Zonda Contracts</relationshipLabel>
        <relationshipName>Contract_User_Group_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Contract User Group Association</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Contract User Group Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract User Group Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>